--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pays",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/captainMoh/pays/",
+  "homepage": "https://captainMoh.github.io/pays",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
